<resources>
    <string name="app_name">Vending</string>
    <string name="title_activity_login">Login</string>
    <string name="login_title">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="un">Username</string>
    <string name="poweredby">Powered By</string>
    <string name="copyright">Copyright \u00a9 2016 Guhring, Inc All rights reserved</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="remember">Remember Me!</string>
    <string name="login_banner_text">Vending Executive Report Suite</string>
    <string name="title_activity_new_gadget">NewGadgetActivity</string>
    <string name="title_activity_edit_gadget">EditGadgetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="thumbnail">thumbnail</string>
    <string name="searchTitle">Search</string>
    <string name="searchHint">Search The Machines List</string>
    <string name="fa_circle"></string>

</resources>
